Round robin concurrency implemented
